<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">System</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Nombreboton">Buscar</string>
    <string name="Titulo">Informacion Del Estudiante</string>
    <string name="nombre">Name</string>
    <string name="apellidopat">last name</string>
    <string name="apellidomat">Fisr name</string>
    <string name="masculino">masculino</string>
    <string name="femenino">femenino</string>
    <string name="estadistica">Estadisticas</string>
    <string name="ciclo">Ciclo</string>
    <string name="ingreseciclo">Ingrese Ciclo</string>
    <string name="txtInicioSesion">Bienvenidos al Sistema</string>
    <string name="txtHintUsuario">User</string>
    <string name="txtHintPassword">Password</string>
    <string name="btnIntro">Intro</string>
    <string name="title_activity_validar">Validar</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_fullscreen_activity0">FullscreenActivity0</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="title_activity_main_activity5">MainActivity5</string>

</resources>
