<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7DFBB"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity1" >

    <Button
        android:id="@+id/button2"
        style="@style/botton" />
    <!-- txtbuscador -->

    <EditText
        android:id="@+id/editText2"
        style="@style/NombreEstandar" />


    <!-- texfiel letra -->

    <TextView
        android:id="@+id/textView2"
        style="@style/titulo"
        android:text="@string/Titulo" />
    <!-- txtnombre -->

    <EditText
        android:id="@+id/editText3"
        style="@style/estandar2"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/editText1"
        style="@style/estandar3"
        android:hint="@string/apellidopat" />

    <EditText
        android:id="@+id/editText4"
        style="@style/estandar4"
        android:hint="@string/apellidomat" />

    <RadioButton
        android:id="@+id/radioButton1"
        style="@style/estandar5"
        
        android:text="@string/masculino" />

    <RadioButton
        android:id="@+id/radioButton1"
        style="@style/estandar6"
        
        android:text="@string/femenino" />

    <Button
        android:id="@+id/button1"
        style="@style/estandar7"
        android:onClick="validarIngresoestadisticas"       
        android:text="@string/estadistica" />

</RelativeLayout>
