<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7DFBB"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        style="@style/txtTituloInicioSesion"
        android:id="@+id/txtInicioSesion"
        android:layout_alignParentTop="true"
        android:text="@string/txtInicioSesion" />

    <EditText
        android:id="@+id/txtUsuario"
        style="@style/inputInicioSesion"
        android:layout_below="@+id/txtInicioSesion"
        android:hint="@string/txtHintUsuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtPasswd"
        style="@style/inputInicioSesion"
        android:layout_below="@+id/txtUsuario"
        android:hint="@string/txtHintPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        style="@style/btnSubmit"
        android:layout_below="@+id/txtPasswd"
        android:onClick="validarIngreso"
        android:text="@string/btnIntro" />


</RelativeLayout>
